<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDE2AD"
    tools:context=".EnderecoActivity">

    <LinearLayout
        android:id="@+id/ll_dados_pessoais_tit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EDE2AD"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lbl_cad_endereco"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#3D3124"
            android:gravity="center"
            android:text="@string/cadastro_endereco"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_dados_pessoais_tit">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:gravity="center"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_cep"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:hint="@string/cep"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_busca_cep"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_form_theme"
            android:text="@string/buscar_cep" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_cad_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_logradouro"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_logradouro"
                android:maxLength="30"
                android:maxLines="1"
                android:textColor="#000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_bairro"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_bairro"
                android:maxLength="20"
                android:maxLines="1"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColorHint="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="3"
                    android:hint="@string/hint_nro"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:textColor="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="0"
                    android:hint="@string/hint_complemento"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColor="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_referencia"
                android:maxLength="90"
                android:maxLines="3"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_cancelar_end"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_form_theme"
            android:text="@string/cancelar"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button2"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_form_theme"
            android:text="@string/aplicar"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>