<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDE2AD"
    tools:context=".NewPasswordActivity">
    <LinearLayout
        android:id="@+id/ll_new_password_tit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EDE2AD"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/lbl_new_passwrd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#3D3124"
            android:gravity="center"
            android:text="@string/alterar_senha"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_new_passwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_new_password_tit">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_old_passwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/digite_sua_senha"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_new_passwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/insira_a_nova_senha"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_confirm_new_passwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/confirme_a_nova_senha"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_cancelar_new_passwd"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_form_theme"
            android:text="@string/cancelar"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btn_aplicar_new_passwd"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_form_theme"
            android:text="@string/aplicar"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>