<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardiew_cardapio"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@color/black" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/preco_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/pre_o_temp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/titulo_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:gravity="center"
                android:text="@string/titulo_temp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_add_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_borderless_theme"
                android:elevation="8dp"
                android:text="@string/add_temp" />

            <Button
                android:id="@+id/btn_del_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_borderless_theme"
                android:text="DEL" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>